Ensure white space shows EditNotePage

--- a/fe/src/components/notes/EditNotePage/EditNotePage.scss
+++ b/fe/src/components/notes/EditNotePage/EditNotePage.scss
@@ -48,4 +48,8 @@
       }
     }
   }
+
+  .body {
+    white-space: pre-wrap;
+  }
 }
